# QT_game

./: CMakeLists.txt  CityGuessDB.db  gameover.cpp  gameover.h  gameover.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pics.qrc  scoreboard.cpp  scoreboard.h  scoreboard.ui  src.qrc
